@@ -2,6 +2,7 @@
 Fusion 1.210 - February 28th, 2004
 --------------------------------------------------------------------------------
 
+- 02-14-04: Added Graphic support for Land protector: no effect though [Oatmeal]
 - 02-14-04: Fixed Beat bane not giving bonus damage [Oatmeal]
 - 02-14-04: Fixed Triple blow delay  [Oatmeal]
 - 02-14-04: Fixed Guild Skill bug (#382) [beita]
